--- a/changelog
+++ b/changelog
@@ -1,31 +1,48 @@
-##### DSLF - Changelog
+######## DSLF - Changelog
 
-##### 2021-01-08
+######## 2021-01-09
 Added:
-- [ASN] Option: implementation of the "random" value for the "payload" option
-- [PGM] Option: implementation of the "--protocol" option
-
-
-##### 2021-01-07
-Added:
-- [ASN] Scanner: when encounter a 401 return code, push payload in base64 in a Autorization HTTP header
-- [Repository] Document: created a changelog file
+ - [ASN] Scanner: display HTTP code because the behavior of the scanner depends on HTTP code
 
 Changed:
-- [ASN] Scanner: minor updates in outputs
+ - [ASN] Scanner: now scanning while crawling (huge improvment)
+ - [ASN] Scanner: ths "full" value of the "payload" option is now "extended"
+ - [ASN] Scanner: minor updates in outputs
 
 Bugfix:
-- [ASN] Crawler: crash with invalid certificates
+ - [ASN] Scanner: crash when URL does not exist or when the remote server returns a CLOSED TCP flag
+ - [ASN] Scanner: minor fixes in outputs
 
 
-##### 2021-01-06
-Bugfix:
-- [ASN] Crawler: crash with ressources different than HTML pages
-
-
-##### 2021-01-05
+######## 2021-01-08
 Added:
-- [Repository] Media: new video file pushed
+ - [ASN] Option: implementation of the "random" value for the "payload" option
+ - [PGM] Option: implementation of the "--protocol" option
+
+Changed:
+ - [ASN] Scanner: minor updates in outputs
+
+
+######## 2021-01-07
+Added:
+ - [ASN] Scanner: when encounter a 401 return code, push payload in base64 in a Autorization HTTP header
+ - [Repository] Document: created a changelog file
+
+Changed:
+ - [ASN] Scanner: minor updates in outputs
 
 Bugfix:
-- [ASN] Scanner: crash in case of POST requests when no input field is found in URL source
+ - [ASN] Crawler: crash with invalid certificates
+
+
+######## 2021-01-06
+Bugfix:
+ - [ASN] Crawler: crash with ressources different than HTML pages
+
+
+######## 2021-01-05
+Added:
+ - [Repository] Media: new video file pushed
+
+Bugfix:
+ - [ASN] Scanner: crash in case of POST requests when no input field is found in URL source
