--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@
 ######## 2021-01-11
 Bugfix:
  - [ASN] bug when pushing payload in 401 pages
+ - [ASN] allow redirection was omitted in some request calls
 
 
 ######## 2021-01-10
